fix: Fix Image Height Issue on Mobile

--- a/assets/styles/blog-post.css
+++ b/assets/styles/blog-post.css
@@ -46,7 +46,7 @@ div.bp-section-2-flexbox-container {
 }
 div.section-2 img {
   width: 100%;
-  height: auto;
+  height: 30%;
 }
 
 
@@ -152,6 +152,10 @@ div.bp-section-6-flexbox-container div.archive-links {
   div.section-2 {
     grid-area: feat-img;
   }
+  div.section-2 img {
+  width: 100%;
+  height: 50%;
+}
   div.section-3 {
     grid-area: article;
     max-width: 800px;
